--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".alarm.SettingActivity"
+            android:label="@string/title_activity_setting"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <provider
             android:name=".db.ContentProvider"
@@ -34,6 +38,15 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/favorite_widget_info" />
+        </receiver>
+
+        <receiver
+            android:name=".alarm.TvReminderService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
         </receiver>
 
         <activity android:name=".DetailActivity" />
