--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.dolan.dolantancepapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <permission android:name="com.dolan.dolantancepapp.DATABASE_WRITE" />
     <permission android:name="com.dolan.dolantancepapp.DATABASE_READ" />
@@ -16,9 +17,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".alarm.SettingActivity"
-            android:label="@string/title_activity_setting"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:label="@string/title_activity_setting"/>
         <provider
             android:name=".db.ContentProvider"
             android:authorities="com.dolan.dolantancepapp"
